--- a/alert-api/conditions.yml
+++ b/alert-api/conditions.yml
@@ -1,11 +1,9 @@
-- fields:
-    alertname: MySQLDown
-      # status: firing
-      #    description: MySQL mysql on 192.168.12.4:9104 is not up.
-      # summary: MySQL not up
+- name: NodeRecentlyRebooted
+  fields:
+    alertname: NodeRecentlyRebooted
   action: restart_service
 
 
-- fields:
-    alertname: mysql
-  action: restart_service
+# - fields:
+#     alertname: mysql
+#   action: restart_service
